docker/frontend.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: feedparser
    tier: frontend
spec:
  type: LoadBalancer
  selector:
    app: feedparser
    tier: frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: https
    protocol: TCP
    port: 443
    targetPort: 4443
  - name: node-ssr
    protocol: TCP
    port: 8081
    targetPort: 8081
  - name: node-api
    protocol: TCP
    port: 8082
    targetPort: 8082
